2007-10-02 Yusei
* Fix planingbox test name.

2007-09-04 Kazuhiko
* use portal_url.getPortalObject().absolute_url() instead of portal_url.getPortalPath() for better virtual host support.

2007-02-13 rafael
* Add planningbox_field_zuite.

2007-02-13 yo
* Add datetime_field_zuite.

2006-12-12 yo
* Add integer_field_zuite.

2006-11-13 Seb
* Add testWorklist

2006-11-09 yo
* Add testReportTreeWithStatMethod.

2006-11-07 Kevin
* New listbox redirection tests.

2006-11-02 aurel
* Call sleep while waiting for activities thus we  reduce cpu and mysql usage to let activities run

2006-09-15 Kevin
* Add new test to check that redirections triggered by the listbox are ok.

2006-09-09 jerome
* Add a form that shows a multi relation field and a relation field for Foo.
* A few more tests for relation fields.

2006-09-08 Seb
* Define a new variable so we can user ${base_url} instead of /erp5/

2006-08-14 jerome
* More tests for workflow transitions / dialog forms
* Tests for Prev / Next button from selection

2006-08-12 jerome
* Add foo_workflow for Foo objects
* Add tests for passing workflow transitions

2006-08-02 yo
* Check for an empty report tree.

2006-07-31 chris
* Added tests for dependency handling in usiness template install

2006-07-31 jerome
* Add a new suite "relation_field_zuite"
* Add checkPortalStatusMessage to user-extensions.js

2006-07-27 yo
* Add a new suite "check_box_field_zuite".
* Add my_frozen to Foo_view.

2006-07-26 Kevin
* Test form_dialog Action List Rendering.
* Extract PortalType_addAction delete part to new PortalType_deleteAction script.

2006-07-26 yo
* Test a validation error with an editable float field in a listbox.

2006-07-26 yo
* Add a new suite "document_zuite".

2006-07-19 yo
* Fix testReportTree, since the default is "Hide" but not "Show" in report tree mode.
* Add testDynamicReportTree which tests dynamically generated domains with report tree mode.

2006-07-19 jerome
* add user-extension.js for Selenium extensions

2006-07-18 yo