@@ -115,7 +115,7 @@
 <tr>\n
   <td>assertValue</td>\n
   <td>//select[@name="listbox_list_start"]</td>\n
-  <td>100</td>\n
+  <td>10</td>\n
 </tr>\n
 \n
 <tr>\n
@@ -126,7 +126,7 @@
 <tr>\n
   <td>assertValue</td>\n
   <td>//select[@name="listbox_list_start"]</td>\n
-  <td>200</td>\n
+  <td>20</td>\n
 </tr>\n
 \n
 <tr>\n
@@ -137,7 +137,7 @@
 <tr>\n
   <td>assertValue</td>\n
   <td>//select[@name="listbox_list_start"]</td>\n
-  <td>100</td>\n
+  <td>10</td>\n
 </tr>\n
 \n
 <tr>\n
@@ -154,12 +154,12 @@
 <tr>\n
   <td>selectAndWait</td>\n
   <td>listbox_list_start</td>\n
-  <td>value=200</td>\n
+  <td>value=20</td>\n
 </tr>\n
 <tr>\n
   <td>assertValue</td>\n
   <td>//select[@name="listbox_list_start"]</td>\n
-  <td>200</td>\n
+  <td>20</td>\n
 </tr>\n
 \n
 <tr>\n
